dev.log

> narimato@3.7.1 dev
> next dev

   ▲ Next.js 15.4.4
   - Local:        http://localhost:3000
   - Network:      http://192.168.100.229:3000
   - Environments: .env.local, .env

 ✓ Starting...
 ✓ Ready in 55.7s
 ○ Compiling /api/v1/admin/organizations ...
 ✓ Compiled /api/v1/admin/organizations in 775ms (303 modules)
 POST /api/v1/admin/organizations 200 in 92089ms
 ○ Compiling /favicon.ico ...
Error creating organization: SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at POST (app/api/v1/admin/organizations/route.ts:26:31)
  24 |     await connectMasterDb();
  25 |
> 26 |     const body = await request.json();
     |                               ^
  27 |     
  28 |     // Validate required fields - only name and slug are required from user
  29 |     if (!body.name || !body.slug) {
 ✓ Compiled /favicon.ico in 2.9s (1329 modules)
 GET /favicon.ico 200 in 3298ms
 GET /organization-editor 200 in 3665ms
 GET /organization-editor 200 in 3214ms
 ✓ Compiled in 377ms (1289 modules)
 GET /apple-touch-icon.png 404 in 3435ms
 GET /apple-touch-icon-precomposed.png 404 in 3763ms
Admin organizations list error: [MongooseError: Operation `organizations.find()` buffering timed out after 10000ms]
 GET /api/v1/admin/organizations 500 in 10889ms
Error creating organization: [MongooseError: Operation `organizations.findOne()` buffering timed out after 10000ms]
 POST /api/v1/admin/organizations 500 in 10032ms
 ✓ Compiled /api/test-db in 176ms (1291 modules)
=== Database Connection Test ===
MONGODB_URI exists: true
MONGODB_URI value: Set (length: 135)
 GET /api/test-db 200 in 729ms
 POST /api/v1/admin/organizations 200 in 10004ms
Error creating organization: [MongooseError: Operation `organizations.findOne()` buffering timed out after 10000ms]
Error creating organization: [MongooseError: Operation `organizations.findOne()` buffering timed out after 10000ms]
 POST /api/v1/admin/organizations 500 in 10021ms
 POST /api/v1/admin/organizations 200 in 5007ms
Error creating organization: [MongooseError: Operation `organizations.findOne()` buffering timed out after 10000ms]
 POST /api/v1/admin/organizations 500 in 10031ms
Error creating organization: [MongooseError: Operation `organizations.findOne()` buffering timed out after 10000ms]
Error creating organization: [MongooseError: Operation `organizations.findOne()` buffering timed out after 10000ms]
 POST /api/v1/admin/organizations 500 in 10026ms
Error creating organization: [MongooseError: Operation `organizations.findOne()` buffering timed out after 10000ms]
 POST /api/v1/admin/organizations 500 in 10015ms
[?25h
